--- a/Assignment.html
+++ b/Assignment.html
@@ -13,5 +13,6 @@
 	<h3>Bulbasaur</h3>
 	<img src=https://i.pinimg.com/736x/46/7e/db/467edb818bc862ef7f54dece5df4d762.jpg>
 	<h6>#001</h6>
+	<a href=Dog.html>Dog Image</a>
 	</body>
 </html>
