--- a/Assignment.html
+++ b/Assignment.html
@@ -16,4 +16,12 @@
 	<a href=Dog.html>Dog Image</a>
 	<a href=https://images.ctfassets.net/2djrn56blv6r/77qk9xThoGaeLkIUPRbD9p/43e899c8544288b780da9c8da9c229fc/how-to-tell-11-symptoms.jpeg?fm=webp&q=75&w=1920>Come And Relax</a>
 	</body>
+<footer>
+	<nav>
+		<a href=Assignment.html>Home</a>
+		<a href=Dog.html>Dog Picture</a>
+		<a href=Dog_Video.html>Dog Video</a>
+	</nav>
+Created by Zaneb Pace
+</footer>
 </html>
