--- a/Dog.html
+++ b/Dog.html
@@ -9,5 +9,13 @@
 	<img src=C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Pooch.jpg>
 <a href=Assignment.html>Home</a>
 	</body>
+<footer> 
+	<nav>
+		<a href=Assignment.html>Home</a>
+		<a href=Dog.html>Dog Picture</a>
+		<a href=Dog_Video.html>Dog Video</a>
+	</nav>
+Created by Zaneb Pace
+</footer>
 </html>
 	
