--- a/Basic_HTML_and_JavaScript_1/HTML/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/HTML/Basic_HTML_1.html
@@ -1,4 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <script src="Basic_JavaScript_1.js"></script>
+<font color="green">The Rainbow</font>
+<font color="#008B8B">Order of Colours</font>
+<p><font color="Red">The first colour of the rainbow is Red, followed by Yellow, Pink, Green, Orange, Purple and Blue</font></p>
+
 </html>
