--- a/Basic_HTML_and_JavaScript_1/HTML/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/HTML/Basic_HTML_1.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <script src="Basic_JavaScript_1.js"></script>
-<font color="green" size="7">The Rainbow</font>
-<font color="#008B8B" face="Comic Sans MS" size="4">Order of Colours</font>
-<p><font color="Red" size="3">The first colour of the rainbow is Red, followed by Yellow, Pink, Green, Orange, Purple and Blue</font></p>
+<font color="green" size="7"><b>The Rainbow</font></b>
+<font color="#008B8B" face="Comic Sans MS" size="4"><i>Order of Colours</font></i>
+<p><font color="Red" size="3"><u>The first colour of the rainbow is Red, followed by Yellow, Pink, Green, Orange, Purple and Blue</font></u></p>
 
 </html>
