--- a/Basic_HTML_and_JavaScript_1/HTML/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/HTML/Basic_HTML_1.html
@@ -4,5 +4,5 @@
 <font color="green" size="7"><b>The Rainbow</font></b>
 <font color="#008B8B" face="Comic Sans MS" size="4"><i>Order of Colours</font></i>
 <p><font color="Red" size="3"><u>The first colour of the rainbow is Red, followed by Yellow, Pink, Green, Orange, Purple and Blue</font></u></p>
-
+<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\Rainbow_Waterfall.jpg" alt="Rainbow reflecting through a waterfall" width="500" height="400">
 </html>
