--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<style>
-	p {color:green;}
+	p {color:green; text-align: center;}
 	</style>
 	<p>All Colours bring brightness to everyone's day</p>
 		<title>My Favourite Colour</title>
