--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<style>
-	p {color:green; text-align: center;}
-	</style>
+	<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 	<p>All Colours bring brightness to everyone's day</p>
 		<title>My Favourite Colour</title>
 	</head>
