--- a/Basic_HTML_and_CSS/Basic_HTML_4.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_4.html
@@ -5,7 +5,11 @@
 	.My_Style {
 		background-color: lightblue; color: darkgreen; text-decoration: underline; font-weight: bold; font-size: large;	
 	}
+p 	{
+		color:purple; text-align: center;
+	}
 	</style>
-	<h2 class="My_Style">This h2 element is styled per class attribute font_1</h2>
+	<h1 class="My_Style">This h2 element is styled per class attribute font_1</h1>
+	<p>This program is creative, keeps my mind questioning</p>
 	</body>
 </html>
