--- a/Basic_HTML_and_CSS/HTML_Table.html
+++ b/Basic_HTML_and_CSS/HTML_Table.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<body>
+	<link rel="stylesheet" type="text/css" href="CSS_Table.css"
 		<h1>Christmas List</h1>
 		<table style="width:30%">
 			<tr>
