--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -3,5 +3,8 @@
 	<body>
 		<link rel = "stylesheet" type = "text/css" href = "Basic_CSS_2.css">
 		<p>This is pretty cool!</p>
+		<h1>Entity examples</h1>
+		<h2>This is the entity name for the and sign - &amp;</h2>
+		<h3>This is the entity number for the pound sign - &#163;</h3>
 	</body>
 </html>
