--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -8,7 +8,8 @@
 	
 	<body>
 		<div style="color: blue">
-		<h6>This is my favourite colour, it reminds me of a bright summers day</h6>
+		<h6><em>This is my favourite colour, it reminds me of a bright summers day</h6></em>
+		<a href="Basic_HTML_3.html" target="new">Its an EM tag</a>
 		</div>
 	</body>
 </html>
