--- a/Projects/Index.html
+++ b/Projects/Index.html
@@ -10,16 +10,16 @@
 		<div>
 			<div>
 				<ul>
-					<li>HOME</li>
-					<li>SHOP GALLERY</li>
-					<li>SQUAD MEMBER</li>
+					<a href="#home" id="link"><li>HOME</li></a>
+					<a href="#gallery"><li>SHOP GALLERY</li></a>
+					<a href="#join"><li>SQUAD MEMBER</li></a>
 				</ul>
 			</div>
 		</div>
 		<!-- END NAV -->
 		
 		<!-- HOME -->
-		<div>
+		<div id="home">
 			<div>
 				<div>
 					<span>Poke Squad</span>
@@ -30,7 +30,7 @@
 		
 		 <!-- GALLERY -->
 		<section>
-			<div>
+			<div id="gallery">
 				<h1>Gallery</h1>
 				<div>
 				
@@ -52,7 +52,7 @@
 		 
 		 <!-- SQUAD MEMBER -->
 		 <section>
-			<div>
+			<div id="join">
 				<div>
 					<h1>Join The Club</h1>
 					<div>
