--- a/One_Page_Website/one_page_website.html
+++ b/One_Page_Website/one_page_website.html
@@ -55,14 +55,14 @@
 
     <section id="pictures">
         <h2>Amazing LEGO Builds</h2>
-        <img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/nightmare_before_christmas.jpg" alt="Nightmare Before Christmas" width="300" height="200">
-        <img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/Tree_House.jpg" alt="Tree House" width="300" height="200">
-		<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/Parrot.jpg" alt="Parrot" width="300" height="200">
-		<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/Gruffalo.jpg" alt="Gruffalo" width="300" height="200">
-		<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/Sports_Car.jpg" alt="Car" width="300" height="200">
-		<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/Globe.jpg" alt="The World" width="300" height="200">
-		<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/Red_Ridinghood_Wolf.jpg" alt="Red Ridinghood" width="300" height="200">
-		<img src="C:\Users\zaneb\OneDrive\Documents\GitHub\HTML-and-CSS-Projects\One_Page_Website/insects.jpg" alt="Bugs" width="300" height="200">
+        <img src="nightmare_before_christmas.jpg" alt="Nightmare Before Christmas" width="300" height="200">
+        <img src="Tree_House.jpg" alt="Tree House" width="300" height="200">
+		<img src="Parrot.jpg" alt="Parrot" width="300" height="200">
+		<img src="Gruffalo.jpg" alt="Gruffalo" width="300" height="200">
+		<img src="Sports_Car.jpg" alt="Car" width="300" height="200">
+		<img src="Globe.jpg" alt="The World" width="300" height="200">
+		<img src="Red_Ridinghood_Wolf.jpg" alt="Red Ridinghood" width="300" height="200">
+		<img src="insects.jpg" alt="Bugs" width="300" height="200">
     </section>
 
     <section id="contact">
