--- a/One_Page_Website/one_page_website.html
+++ b/One_Page_Website/one_page_website.html
@@ -3,37 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>LEGO Website</title>
-    <style>
-        body {
-            font: Ariel;
-            background-color: yellow;
-			text-align: center;
-        }
-        header, section, footer {
-            padding: 20px;
-            background-color: CornflowerBlue;
-            color: white;
-			text-align: center;
-        }
-        nav {
-            background-color: LimeGreen;
-            padding: 10px;
-			text-align: center;
-        }
-        nav a {
-            color: black;
-            margin-right: 15px;
-			text-align: center;
-        }
-        section {
-            margin: 20px;
-			text-align: center;
-        }
-        footer {
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/One_Page_Website.css"
 </head>
+
 <body>
 
     <header>
