--- a/My First HTML.html
+++ b/My First HTML.html
@@ -1,5 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<title>My First HTML</title>
-	<p>"Hello, World!"</p>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" width="device-width, initial-scale=1">
+		<title>My First HTML</title>
+		<style> 
+			div {
+			  width: 100px;
+			  height: 100px;
+			  background: red;
+			  position: relative;
+			  animation: mymove 5s infinite;
+			}
+			
+			@keyframes mymove {
+			  from {top: 0px;}
+			  to {top: 200px;}
+			}
+		</style>
+	</head>
+	
+	<body>
+		
+		<p>"Hello, World! this is my first..."</p>
+		<h1>The @keyframes Rule</h1>
+
+		<div></div>
+
+	</body>
+	
 </html>
