--- a/One_Page_Website/One_Page_Website.html
+++ b/One_Page_Website/One_Page_Website.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" width="device-width, initial-scale=1">
     <title>LEGO Website</title>
     <link rel="stylesheet" href="CSS/One_Page_Website.css">
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
 
 <body>
@@ -171,5 +177,7 @@
         </footer>
 
         <script src="JS/One_Page_Website.js"></script>
+
     </body>
+    
 </html>
